the last airbender

--- a/sprites/index.html
+++ b/sprites/index.html
@@ -7,7 +7,9 @@
 
     <script src="libs/p5.js"></script>
     <script src="libs/p5.sound.js"></script>
+    <script src="animation.js"></script>
     <script src="index.js"></script>
+
 
 
     <title>sound game 1</title>
