--- a/final/index.html
+++ b/final/index.html
@@ -13,26 +13,30 @@
         }
 
         body {
-            background: black;
+            background: lightgrey;
         }
 
         canvas {
-            border: 1px solid white;
             display: block;
             margin-left: auto;
             margin-right: auto;
             cursor: pointer;
+            background-image: url("window_frame.jpeg");
+            padding: 52px;
+            background-size: calc(90vh) calc(85vh);
+            background-position: center;
+            background-repeat: no-repeat;
+            box-shadow: inset grey 0px 0px 20px 2px;
         }
 
         p {
             text-align: center;
-            color: white;
+            color: black;
             font-size: 20px;
-            cursor: pointer;
         }
 
         .links {
-            color: white;
+            color: black;
             text-align: center;
         }
 
@@ -52,7 +56,7 @@
                 <a href="https://www.youtube.com/watch?v=TZCfydWF48c" target="_blank">Four Seasons "Winter"</a><br><br>
                 <a href="https://www.youtube.com/watch?v=-tJYN-eG1zk" target="_blank">We Will Rock You</a><br><br>
                 <a href="https://www.youtube.com/watch?v=uX6uBHPGfSs" target="_blank">DNA</a><br><br>
-                <a href="https://www.youtube.com/watch?v=mQER0A0ej0M" target="_blank">Hey Jude</a><br><br>
+                <a href="https://www.youtube.com/watch?v=fMjasXiIhiQ" target="_blank">Moon</a><br><br>
             </div>
         </div>
         <main style="grid-column: 2;"></main>
