--- a/final/index.html
+++ b/final/index.html
@@ -13,7 +13,9 @@
         }
 
         body {
-            background: lightgrey;
+            /* background-image: url("wall.jpeg"); */
+            /* background-size: 3.75vw 110vh; */
+            background: white;
         }
 
         canvas {
@@ -21,12 +23,14 @@
             margin-left: auto;
             margin-right: auto;
             cursor: pointer;
-            background-image: url("window_frame.jpeg");
-            padding: 52px;
-            background-size: calc(90vh) calc(85vh);
+            background-image: url("span.jpeg");
+            padding: 67px;
+            padding-top: 76px;
+            padding-bottom: 76px;
+            background-size: calc(88vh) calc(90vh);
             background-position: center;
             background-repeat: no-repeat;
-            box-shadow: inset grey 0px 0px 20px 2px;
+            /* box-shadow: inset black 0px 0px 20px 2px; */
         }
 
         p {
@@ -57,6 +61,8 @@
                 <a href="https://www.youtube.com/watch?v=-tJYN-eG1zk" target="_blank">We Will Rock You</a><br><br>
                 <a href="https://www.youtube.com/watch?v=uX6uBHPGfSs" target="_blank">DNA</a><br><br>
                 <a href="https://www.youtube.com/watch?v=fMjasXiIhiQ" target="_blank">Moon</a><br><br>
+                <a href="https://www.youtube.com/watch?v=dO1rMeYnOmM" target="_blank">Time in a Bottle</a><br><br>
+
             </div>
         </div>
         <main style="grid-column: 2;"></main>
